--- a/mytopsis/mytopsis.csproj
+++ b/mytopsis/mytopsis.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>mytopsis</RootNamespace>
     <AssemblyName>mytopsis</AssemblyName>
     <StartupObject>mytopsis.EmptyClass</StartupObject>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +39,7 @@
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Design" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmptyClass.cs" />
