--- a/mytopsis/mytopsis.csproj
+++ b/mytopsis/mytopsis.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Design" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Core" />
+    <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmptyClass.cs" />
